--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -5,7 +5,7 @@
     <div class="row mt-5">
         <div class="col-md-6">
             <div class="row">
-                <img [src]="posts_list?.[0]?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'"
+                <img [src]="posts_list?.[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'"
                     class="w-100" alt="">
             </div>
             <div class="row">
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-3 ">
             <div class="row">
-                <img [src]="posts_list?.[1]?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'"
+                <img [src]="posts_list?.[1]?.media" alt="'../../../assets/images/skeleton-loading.gif'"
                     class="w-100" alt="">
             </div>
             <div class="row">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <img [src]="item?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'"
+                        <img [src]="item?.media" alt="'../../../assets/images/skeleton-loading.gif'"
                             class="w-100" alt="">
                     </div>
                 </div>
@@ -97,7 +97,7 @@
     <div class="row border-top">
         <div class="col-md-3 p-3" *ngFor="let item of get_posts_with_amount(5,9)">
             <div class="row">
-                <img [src]="item?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'" class="img__sub"
+                <img [src]="item?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="img__sub"
                     alt="">
             </div>
             <div class="row mt-3 w-90">
@@ -114,7 +114,7 @@
         <h1>Mới nhất</h1>
     </div>
     <div class="mb-4"></div>
-    <div class="row" *ngFor="let item of get_posts_with_amount(9,posts_list.length)">
+    <div class="row mt-5" *ngFor="let item of get_posts_with_amount(9,posts_list.length)">
         <div class="col-md-2">
             <div class="d-flex justify-content-start">
                 <p class="fw-light fs-11">{{get_time_in_words(item?.pubDate||"")}}
@@ -137,7 +137,7 @@
         </div>
         <div class="col-md-3">
             <div class="row">
-                <img [src]="item?.enclosure?.link" alt="'../../../assets/images/skeleton-loading.gif'" class="img__sub"
+                <img [src]="item?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="img__sub"
                     alt="">
             </div>
         </div>
