--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -53,7 +53,7 @@
                                 class="fas fa-home fs-4"></i></a>
                     </li>
                     <li class="nav-item news-topic fw-bold">
-                        <a class="nav-link  text-dark" aria-current="page" href="vietnamnet">Tin nóng</a>
+                        <a class="nav-link  text-dark" aria-current="page" href="chu-de/vietnamnet">Tin nóng</a>
                     </li>
                     <li class="nav-item news-topic fw-bold" *ngFor="let item of feeds_list">
                         <a class="nav-link  text-dark" aria-current="page" href="chu-de/{{item?.slug}}">{{item.title}}</a>
