--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -60,16 +60,11 @@
 
 .new__posts {
   .middle__column {
-    .row:nth-child(1) {
+    .middle__title {
       margin: auto 20px;
     }
   }
 }
-
-
-
-
-
 
 @media only screen and (max-width: 768px) {
   .post__image {
