--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -140,3 +140,15 @@
     opacity: 0.5;
   }
 }
+
+.app__logo{
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+@media only screen and (min-width: 768px) {
+  .app__logo{
+    margin-left: 30px;
+  }
+}
