--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,7 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="row">
-                    <img [src]="article_list[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'"
-                        class="w-100">
+                    <img [src]="ts_news[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="w-100">
                 </div>
                 <div class="row">
                     <div class="col d-flex flex-row-reverse fw-light fs-11">Theo Vietnamnet
@@ -16,26 +15,26 @@
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <a [href]="'chu-de/'+get_slug(article_list[0]?.category||'')">
-                            <p class="fs-11 text-muted">{{article_list[0]?.category}}</p>
+                        <a [href]="'chu-de/'+get_slug(ts_news[0]?.category||'')">
+                            <p class="fs-11 text-muted">{{ts_news[0]?.category}}</p>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <a href="{{article_list[0]?.link}}" class="hot-title" target="_blank">
-                            <h6 id="hot-post">{{article_list[0]?.title}}</h6>
+                        <a href="{{ts_news[0]?.link}}" class="hot-title" target="_blank">
+                            <h6 id="hot-post">{{ts_news[0]?.title}}</h6>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="text-center hot-content">{{article_list[0]?.description}}</p>
+                        <p class="text-center hot-content">{{ts_news[0]?.description}}</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <p class="fw-light fs-11">{{get_duration(article_list[0]?.pubDate||"")}}
+                        <p class="fw-light fs-11">{{get_duration(ts_news[0]?.pubDate||"")}}
                             <span class="p-1"></span>
                             Nguồn : Vietnamnet
                         </p>
@@ -48,7 +47,7 @@
             <h6>TIN NÓNG</h6>
             <div class="p-1"></div>
 
-            <div class="row" *ngFor="let item of get_home_list_with_amount(1,4);">
+            <div class="row" *ngFor="let item of get_list_with_amount(1,4,ts_news);">
                 <div class="col-md-6">
                     <a href="{{item.link}}" class="news-title" target="_blank">
                         <h6 class="fs-20 news-title">{{item.title}}</h6>
@@ -71,7 +70,7 @@
             <div class="row">
                 <img mdbLazyLoading [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
                     [attr.data-src]="item.media" alt="'../../../assets/images/skeleton-loading.gif'"
-                    class="img-fluid my-3" />
+                    class="img-fluid my-3 img__sub" />
             </div>
             <div class="row">
                 <a href="{{item.link}}" class="text-break news-title" target="_blank">{{item.title}}</a>
@@ -91,7 +90,7 @@
                         target="_blank">{{article_list[10]?.title}}</a>
                 </div>
             </div>
-            <div class="row pt-4" *ngFor="let item of get_home_list_with_amount(11,25)">
+            <div class="row pt-4" *ngFor="let item of get_home_list_with_amount(11,27)">
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
@@ -106,27 +105,27 @@
         <div class="col-md-6 middle__column">
             <!-- start new article -->
             <div class="row border-bottom middle__title">
-                <h3><a href="chu-de/thoi-su" class="text-body">Thời sự</a></h3>
+                <h3><a routerLink="/chu-de/thoi-su" class="text-body">Thời sự</a></h3>
             </div>
 
             <div class="row p-4">
                 <div class="col-md-3">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="ts_news[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'" />
+                        [attr.data-src]="ts_news[5]?.media" alt="'../../../assets/images/skeleton-loading.gif'" />
                 </div>
                 <div class="col-md-9">
-                    <a href="{{ts_news[0]?.link}}" class="news-title" target="_blank">{{ts_news[0]?.title}}</a>
+                    <a href="{{ts_news[5]?.link}}" class="news-title" target="_blank">{{ts_news[5]?.title}}</a>
                 </div>
             </div>
             <div class="row p-4 pt-0">
-                <a href="{{item.link}}" class="news-title mt-3" *ngFor="let item of get_list_with_amount(1,11,ts_news)"
+                <a href="{{item.link}}" class="news-title mt-3" *ngFor="let item of get_list_with_amount(6,10,ts_news)"
                     target="_blank">{{item.title}}</a>
             </div>
             <!-- end new article -->
             <!-- start new article -->
             <div class="row border-bottom middle__title">
-                <h3><a href="chu-de/cong-nghe" class="text-body">Công nghệ</a></h3>
+                <h3><a routerLink="/chu-de/cong-nghe" class="text-body">Công nghệ</a></h3>
             </div>
 
             <div class="row p-4">
@@ -140,13 +139,13 @@
                 </div>
             </div>
             <div class="row p-4 pt-0">
-                <a href="{{item.link}}" class="news-title mt-3"
-                    *ngFor="let item of get_list_with_amount(1,11,tech_news)" target="_blank">{{item.title}}</a>
+                <a href="{{item.link}}" class="news-title mt-3" *ngFor="let item of get_list_with_amount(1,5,tech_news)"
+                    target="_blank">{{item.title}}</a>
             </div>
             <!-- end new article -->
             <!-- start new article -->
             <div class="row border-bottom middle__title">
-                <h3><a href="chu-de/kinh-doanh" class="text-body">Kinh doanh</a></h3>
+                <h3><a routerLink="/chu-de/kinh-doanh" class="text-body">Kinh doanh</a></h3>
             </div>
 
             <div class="row p-4">
@@ -162,10 +161,71 @@
             </div>
             <div class="row p-4 pt-0">
                 <a href="{{item.link}}" class="news-title mt-3"
-                    *ngFor="let item of get_list_with_amount(1,11,business_news)" target="_blank">{{item.title}}</a>
+                    *ngFor="let item of get_list_with_amount(1,5,business_news)" target="_blank">{{item.title}}</a>
             </div>
             <!-- end new article -->
+            <!-- start new article -->
+            <div class="row border-bottom middle__title">
+                <h3><a routerLink="/chu-de/the-gioi" class="text-body">Thế giới</a></h3>
+            </div>
 
+            <div class="row p-4">
+                <div class="col-md-3">
+                    <img class="w-100" mdbLazyLoading
+                        [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
+                        [attr.data-src]="world_news[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'" />
+                </div>
+                <div class="col-md-9">
+                    <a href="{{world_news[0]?.link}}" class="news-title" target="_blank">{{world_news[0]?.title}}</a>
+                </div>
+            </div>
+            <div class="row p-4 pt-0">
+                <a href="{{item.link}}" class="news-title mt-3"
+                    *ngFor="let item of get_list_with_amount(1,5,world_news)" target="_blank">{{item.title}}</a>
+            </div>
+            <!-- end new article -->
+            <!-- start new article -->
+            <div class="row border-bottom middle__title">
+                <h3><a routerLink="/chu-de/the-thao" class="text-body">Thể thao</a></h3>
+            </div>
+
+            <div class="row p-4">
+                <div class="col-md-3">
+                    <img class="w-100" mdbLazyLoading
+                        [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
+                        [attr.data-src]="sport_news[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'" />
+                </div>
+                <div class="col-md-9">
+                    <a href="{{sport_news[0]?.link}}" class="news-title" target="_blank">{{sport_news[0]?.title}}</a>
+                </div>
+            </div>
+            <div class="row p-4 pt-0">
+                <a href="{{item.link}}" class="news-title mt-3"
+                    *ngFor="let item of get_list_with_amount(1,5,sport_news)" target="_blank">{{item.title}}</a>
+            </div>
+            <!-- end new article -->
+            <!-- start new article -->
+            <div class="row border-bottom middle__title">
+                <h3><a routerLink="/chu-de/giao-duc" class="text-body">Giáo dục</a></h3>
+            </div>
+
+            <div class="row p-4">
+                <div class="col-md-3">
+                    <img class="w-100" mdbLazyLoading
+                        [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
+                        [attr.data-src]="education_news[0]?.media"
+                        alt="'../../../assets/images/skeleton-loading.gif'" />
+                </div>
+                <div class="col-md-9">
+                    <a href="{{education_news[0]?.link}}" class="news-title"
+                        target="_blank">{{education_news[0]?.title}}</a>
+                </div>
+            </div>
+            <div class="row p-4 pt-0">
+                <a href="{{item.link}}" class="news-title mt-3"
+                    *ngFor="let item of get_list_with_amount(1,5,education_news)" target="_blank">{{item.title}}</a>
+            </div>
+            <!-- end new article -->
 
         </div>
         <!-- last column -->
@@ -174,13 +234,13 @@
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
-                        [attr.data-src]="article_list[26]?.media" alt="'../../../assets/images/skeleton-loading.gif'">
+                        [attr.data-src]="article_list[28]?.media" alt="'../../../assets/images/skeleton-loading.gif'">
                 </div>
                 <div class="col">
-                    <a href="{{article_list[26]?.link}}" class="text-break news-title">{{article_list[26]?.title}}</a>
+                    <a href="{{article_list[28]?.link}}" class="text-break news-title">{{article_list[28]?.title}}</a>
                 </div>
             </div>
-            <div class="row pt-4" *ngFor="let item of get_list_with_amount(27,42,article_list)">
+            <div class="row pt-4" *ngFor="let item of get_list_with_amount(29,45,article_list)">
                 <div class="col">
                     <img class="w-100" mdbLazyLoading
                         [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'"
