--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,7 +12,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" routerLink="/home" title="Home"><span id="custom-brand">WORLDNOW</span></a>
+        <a class="navbar-brand fw-bold" routerLink="/home" title="Home"><span id="custom-brand">
+            <img src="../../../assets/images/logo.png" alt="" class="app__logo">
+        </span></a>
         <div class="justify-content-end">
             <div class="row">
                 <div class="col">
@@ -51,9 +53,6 @@
                     <li class="nav-item">
                         <a class="nav-link news-topic text-dark" aria-current="page" routerLink="/home"><i
                                 class="fas fa-home fs-4"></i></a>
-                    </li>
-                    <li class="nav-item news-topic fw-bold">
-                        <a class="nav-link  text-dark" aria-current="page" [routerLink]="'/chu-de/vietnamnet'">Tin nóng</a>
                     </li>
                     <li class="nav-item news-topic fw-bold" *ngFor="let item of feeds_list">
                         <a class="nav-link  text-dark" aria-current="page" [routerLink]="'/chu-de/'+item?.slug">{{item.title}}</a>
