--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -10,7 +10,7 @@
       <div><a href="/change-password">Thay đổi mật khẩu</a></div>
       <div><a href="#">Tin đã lưu</a></div>
       <div><a href="#">Tin đã đọc</a></div>
-      <div><a href="#" class="red">Xóa tài khoản</a></div>
+      <div><a (click)="openPopconfirm($event)" class="red">Xóa tài khoản</a></div>
     </div>
   </div>
   <div class="right-panel w-50 ">
