--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -26,10 +26,8 @@
             <div class="col-3">
                 <select class="sort__by_date" (change)="updateOption()">
                     <option value="0">Tất cả</option>
-                    <option value="1">Theo Ngày</option>
-                    <option value="2">Theo Tuần</option>
-                    <option value="3">Theo Tháng</option>
-                    <option value="4">Theo Năm</option>
+                    <option value="1">Tăng dần</option>
+                    <option value="2">Giảm dần</option>
                 </select>
             </div>
         </div>
