#6 - handle enter keypress for keyword input

--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center mt-4">
-    <input type="text" name="keyword1" value="" class="w-50" placeholder="Tìm kiếm" [(ngModel)]="keyword" />
+    <input type="text" name="keyword1" value="" class="w-50" placeholder="Tìm kiếm" [(ngModel)]="keyword" (keypress)="search($event)"/>
     <a [routerLink]="['/search', keyword,get_selected_option()]" type="button"
-        class="btn text-primary bg-danger ml-20"><i class="fas fa-search text-light"></i></a>
+        class="btn text-primary bg-danger ml-20 search__action"><i class="fas fa-search text-light"></i></a>
 </div>
 <div class="row d-flex justify-content-center mt-4">
     <div class="col-md-2 col-sm-12 search__q">
