#4 - finish active account

--- a/src/app/auth/register/confirm-account/confirm-account.component.css
+++ b/src/app/auth/register/confirm-account/confirm-account.component.css
@@ -1,3 +1,11 @@
-
+.confirm-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.confirm-component img {
+  width: 100px;
+  height: 100px;
+}
 
 /*# sourceMappingURL=confirm-account.component.css.map */
