--- a/src/app/auth/register/confirm-account/confirm-account.component.html
+++ b/src/app/auth/register/confirm-account/confirm-account.component.html
@@ -1,2 +1,9 @@
-<p>bạn đã kích hoạt tài khoản</p>
-<a href="/signin">đăng nhập</a>
+<app-navbar></app-navbar>
+<div class="container d-flex justify-content-center mt-5">
+  <div class="confirm-component">
+    <img src="assets/images/green-tick.png">
+    <p>bạn đã kích hoạt tài khoản</p>
+    <a href="/signin">Quay lại đăng nhập!</a>
+  </div>
+</div>
+<app-footer></app-footer>
